--- a/tox.ini
+++ b/tox.ini
@@ -27,7 +27,7 @@ deps =
 [mldeps-py36]
 deps =
     {[standarddeps]deps}
-    tensorflow
+    tensorflow == 2.0
     https://download.pytorch.org/whl/cpu/torch-1.3.1%2Bcpu-cp36-cp36m-win_amd64.whl ; sys_platform == 'win32'
     torch == 1.3.1 ; sys_platform == 'darwin'
     https://download.pytorch.org/whl/cpu/torch-1.3.1%2Bcpu-cp36-cp36m-linux_x86_64.whl ; sys_platform == 'linux'
@@ -35,7 +35,7 @@ deps =
 [mldeps-py37]
 deps =
     {[standarddeps]deps}
-    tensorflow
+    tensorflow == 2.0
     https://download.pytorch.org/whl/cpu/torch-1.3.1%2Bcpu-cp37-cp37m-win_amd64.whl ; sys_platform == 'win32'
     torch == 1.3.1 ; sys_platform == 'darwin'
     https://download.pytorch.org/whl/cpu/torch-1.3.1%2Bcpu-cp37-cp37m-linux_x86_64.whl ; sys_platform == 'linux'
